# fall_detector

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  FAILURE_MODES.md  README.md  SAFETY_CASE.md  STATE_MACHINE.md  fall_detector.py  pyproject.toml  requirements.txt
tools/: replay_events.py
