[tool.poetry]
name = "fall-detector"
version = "3.2.0"
description = "Camera-Based Collapse & Non-Recovery Detection System"
authors = ["Nik <sv1eex@hotmail.com>"]
readme = "README.md"
packages = [{include = "fall_detector.py"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
opencv-python = "^4.8.0"
numpy = "^1.24.0"
ultralytics = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fall-detector"
version = "3.2.0"
description = "A Safety-Oriented, Single-Camera Corridor Monitoring System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Nik", email = "sv1eex@hotmail.com"}
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "ultralytics>=8.3.0",
]
